--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,16 +22,17 @@
             <form th:action="@{/login}" method="post">
                 <fieldset>
                     <h1 th:text="#{user.login.message}"></h1>
-                    <div th:if="${param.error}">
+
+     <!--               <div th:if="${param.error}">
                         <div class="alert alert-danger">
                             <span th:text="#{user.login.invalid}"/>
                         </div>
-                    </div>
-                    <div th:if="${param.logout}">
+                    </div>-->
+               <!--     <div th:if="${param.logout}">
                         <div class="alert alert-info">
                             <span th:text="#{user.login.loggedOut}"/>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="form-group">
                         <input type="text" name="username" id="username" class="form-control input-lg"
