--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -67,7 +67,7 @@ https://ultraq.github.io/thymeleaf-layout-dialect/Examples.html#layouts
 
 
                 <div class="col-sm-9">
-                    <button type="submit" class="btn btn-primary btn-block" th:alt-title="#{serverTime}"
+                    <button type="submit" class="btn btn-primary btn-block"
                             th:text="#{user.login.register.button}"></button>
                 </div>
 
