--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org"  xmlns:spring="http://www.springframework.org/tags">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:fragment="header-css">
         <!-- this is header-css -->
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" th:href="@{/}">Spring Boot</a>
+                <a class="navbar-brand" th:href="@{/inventory/list}">Inventory</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -45,5 +45,3 @@
 
 </body>
 </html>
-
-sal cum pazar haric
