--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -12,7 +12,8 @@
     <div class="starter-template">
         <h1>403 - Access is denied</h1>
         <div th:inline="text">Hello '[[${#httpServletRequest.remoteUser}]]',
-            you do not have permission to access this page.</div>
+            you do not have permission to access this page.
+        </div>
     </div>
 
 </div>
