--- a/src/main/resources/templates/inventory/update.html
+++ b/src/main/resources/templates/inventory/update.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en"
+      xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title th:text="#{title.application}"></title>
     <div th:replace="fragments/header :: header-css"/>
