--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml"
 >
 <head>
     <title th:text="#{app.name}"></title>
@@ -23,16 +23,16 @@
                 <fieldset>
                     <h1 th:text="#{user.login.message}"></h1>
 
-     <!--               <div th:if="${param.error}">
-                        <div class="alert alert-danger">
-                            <span th:text="#{user.login.invalid}"/>
-                        </div>
-                    </div>-->
-               <!--     <div th:if="${param.logout}">
-                        <div class="alert alert-info">
-                            <span th:text="#{user.login.loggedOut}"/>
-                        </div>
-                    </div>-->
+                    <!--               <div th:if="${param.error}">
+                                       <div class="alert alert-danger">
+                                           <span th:text="#{user.login.invalid}"/>
+                                       </div>
+                                   </div>-->
+                    <!--     <div th:if="${param.logout}">
+                             <div class="alert alert-info">
+                                 <span th:text="#{user.login.loggedOut}"/>
+                             </div>
+                         </div>-->
 
                     <div class="form-group">
                         <input type="text" name="username" id="username" class="form-control input-lg"
