October 31 Development. Final

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <title th:text="#{title.application}"></title>
+
     <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
@@ -10,7 +12,7 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Normal page (No need login)</h1>
+        <h1>About Page</h1>
     </div>
 
 </div>
