--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml"
 >
 <head>
-    <title th:text="#{app.name}"></title>
+    <title th:text="#{title.application}"></title>
     <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
