--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,12 +13,12 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Spring Boot Web Thymeleaf + Spring Security Home</h1>
         <h2>1. Visit <a th:href="@{/manager/home}">Admin page (Spring Security protected, Need Admin Role)</a></h2>
         <h2>2. Visit <a th:href="@{/account/home}">User page (Spring Security protected, Need User Role)</a></h2>
         <h2>3. Visit <a th:href="@{/about}">Normal page</a></h2>
         <h2>4. Visit <a th:href="@{/inventory/list}">Inventory</a></h2>
         <h2>4. Visit <a th:href="@{/account/registration}">Register</a></h2>
+        <h2>5. Visit <a th:href="@{/api/inventory/list}">Inventory Json List</a></h2>
 
     </div>
 
