--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,6 +2,7 @@
 <head>
     <div th:fragment="header-css">
         <!-- this is header-css -->
+        <title th:text="#{title.application}"></title>
 
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}"
               href="webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
